--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB = "mongodb+srv://brogrammers2527:brogrammers2527@cluster0-mwti3.mongodb.net/test?retryWrites=true&w=majority"
+DB = "mongodb://localhost:27017/aoeshop"
 PORT: "3002"
