--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
     "cart-localstorage": "^1.1.4",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
@@ -22,8 +22,10 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
-    "mongodb": "^3.3.4",
-    "mongoose": "^5.7.10",
+    "mongodb": "^3.7.3",
+    "mongoose": "^6.0.14",
+    "mongoose-delete": "^0.5.4",
+    "mongoose-slug-generator": "^1.0.4",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.0",
